# rtsp_client

./: CMakeLists.txt  build.sh  clean.sh
include/: librtspcli.h
src/: CMakeLists.txt  librtspcli.c  list.h  log.c  log.h  parser.c  parser.h  rtcp.c  rtcp.h  rtp.c  rtp.h  rtsp_cli.c  rtsp_cli.h  rtsp_method.c  rtsp_method.h  sd_handler.c  sd_handler.h  send_queue.c  send_queue.h  util.c  util.h
test/: CMakeLists.txt  test_rtsp_client.c
